--- a/pom.xml
+++ b/pom.xml
@@ -51,5 +51,15 @@
 			<artifactId>spark-sql_2.11</artifactId>
 			<version>${spark.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>org.apache.hadoop</groupId>
+			<artifactId>hadoop-common</artifactId>
+			<version>3.0.0-alpha2</version>
+		</dependency>
+		<dependency>
+			<groupId>org.anarres.lzo</groupId>
+			<artifactId>lzo-hadoop</artifactId>
+			<version>1.0.5</version>
+		</dependency>
 	</dependencies>
 </project>
