--- a/pom.xml
+++ b/pom.xml
@@ -14,10 +14,39 @@
 		<slf4j.version>1.7.20</slf4j.version>
 		<log4j.version>2.5</log4j.version>
 		<junit.version>4.12</junit.version>
-		<mmtf.version>1.0.5</mmtf.version>
+<!-- 		<mmtf.version>1.0.5</mmtf.version> -->
+		<mmtf.version>1.0.6-SNAPSHOT</mmtf.version>
 		<biojava.version>5.0.0-alpha8</biojava.version>
 		<spark.version>2.1.0</spark.version>
 	</properties>
+
+	<build>
+		<pluginManagement>
+			<plugins>
+				<plugin>
+					<artifactId>maven-surefire-plugin</artifactId>
+					<version>2.19.1</version>
+					<configuration>
+						<argLine>-Xmx1500M</argLine>
+						<reuseForks>false</reuseForks>
+						<forkCount>1</forkCount>
+
+						<excludes>
+							<!-- we exclude by default the long running tests, they will only 
+								be executed if explicitly called -->
+							<exclude>**/AdvancedQueryTest.java</exclude>
+							<exclude>**/BlastClustersTest.java</exclude>
+							<exclude>**/ChemicalStructureQueryTest.java</exclude>
+							<exclude>**/CustomReportQueryTest.java</exclude>
+							<exclude>**/WildTypeTest.java</exclude>
+							<exclude>**/CustomReportServiceTest.java</exclude>
+						</excludes>
+					</configuration>
+				</plugin>
+
+			</plugins>
+		</pluginManagement>
+	</build>
 
 	<repositories>
 		<repository>
@@ -53,11 +82,11 @@
 			<artifactId>biojava-structure</artifactId>
 			<version>${biojava.version}</version>
 		</dependency>
-<!-- 		<dependency> -->
-<!-- 			<groupId>org.apache.spark</groupId> -->
-<!-- 			<artifactId>spark-core_2.11</artifactId> -->
-<!-- 			<version>${spark.version}</version> -->
-<!-- 		</dependency> -->
+		<dependency>
+			<groupId>org.apache.spark</groupId>
+			<artifactId>spark-core_2.11</artifactId>
+			<version>${spark.version}</version>
+		</dependency>
 		<dependency>
 			<groupId>org.apache.spark</groupId>
 			<artifactId>spark-sql_2.11</artifactId>
@@ -74,6 +103,6 @@
 			<version>1.1.2</version>
 			<type>pom</type>
 		</dependency>
-		
+
 	</dependencies>
 </project>
