--- a/pom.xml
+++ b/pom.xml
@@ -19,45 +19,6 @@
 		<spark.version>2.2.1</spark.version>
 	</properties>
 
-	<build>
-		<pluginManagement>
-			<plugins>
-				<plugin>
-					<artifactId>maven-surefire-plugin</artifactId>
-					<version>2.19.1</version>
-					<configuration>
-						<argLine>-Xmx4g</argLine>
-						<reuseForks>false</reuseForks>
-						<forkCount>2</forkCount>
-
-						<excludes>
-							<!-- we exclude by default the long running tests, they will only 
-								be executed if explicitly called -->
-							<exclude>**/AdvancedQueryTest.java</exclude>
-							<exclude>**/BlastClustersTest.java</exclude>
-							<exclude>**/ChemicalStructureQueryTest.java</exclude>
-							<exclude>**/CustomReportQueryTest.java</exclude>
-							<exclude>**/WildTypeTest.java</exclude>
-							<exclude>**/CustomReportServiceTest.java</exclude>
-						</excludes>
-					</configuration>
-				</plugin>
-				<plugin>
-					<groupId>org.apache.maven.plugins</groupId>
-					<artifactId>maven-javadoc-plugin</artifactId>
-					<version>2.10.4</version>
-				</plugin>
-				<plugin>
-					<groupId>org.apache.maven.plugins</groupId>
-					<artifactId>maven-eclipse-plugin</artifactId>
-					<configuration>
-						<downloadSources>true</downloadSources>
-						<downloadJavadocs>true</downloadJavadocs>
-					</configuration>
-				</plugin>
-			</plugins>
-		</pluginManagement>
-	</build>
 
 	<reporting>
 		<plugins>
@@ -133,10 +94,76 @@
 			<version>1.1.2</version>
 			<type>pom</type>
 		</dependency>
+		<dependency>
+			<groupId>com.squareup.okhttp3</groupId>
+			<artifactId>okhttp</artifactId>
+			<version>3.9.1</version>
+		</dependency>
 
 	</dependencies>
 
+	<build>
+		<plugins>
+			<plugin>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>2.19.1</version>
+				<configuration>
+					<argLine>-Xmx4g</argLine>
+					<reuseForks>false</reuseForks>
+					<forkCount>2</forkCount>
 
-
+					<excludes>
+						<!-- we exclude by default the long running tests, they will only be 
+							executed if explicitly called -->
+						<exclude>**/AdvancedQueryTest.java</exclude>
+						<exclude>**/BlastClustersTest.java</exclude>
+						<exclude>**/ChemicalStructureQueryTest.java</exclude>
+						<exclude>**/CustomReportQueryTest.java</exclude>
+						<exclude>**/WildTypeTest.java</exclude>
+						<exclude>**/CustomReportServiceTest.java</exclude>
+					</excludes>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-javadoc-plugin</artifactId>
+				<version>3.0.0</version>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-eclipse-plugin</artifactId>
+				<version>2.10</version>
+				<configuration>
+					<downloadSources>true</downloadSources>
+					<downloadJavadocs>true</downloadJavadocs>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-shade-plugin</artifactId>
+				<version>3.1.0</version>
+				<executions>
+					<execution>
+						<phase>package</phase>
+						<goals>
+							<goal>shade</goal>
+						</goals>
+					</execution>
+				</executions>
+				<configuration>
+					<artifactSet>
+						<excludes>
+	<!-- 						<exclude>junit:junit</exclude>
+							<exclude>log4j:log4j:jar:</exclude>
+							<exclude>org.slf4j:</exclude>
+							<exclude>org.apache.logging.log4j:</exclude>
+							<exclude>commons-lang:</exclude>
+							<exclude>org.msgpack:</exclude> -->
+						</excludes>
+					</artifactSet>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
 
 </project>
