--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,11 @@
 				<artifactId>maven-javadoc-plugin</artifactId>
 				<version>2.10.4</version>
 			</plugin>
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>findbugs-maven-plugin</artifactId>
+				<version>3.0.5</version>
+			</plugin>
 		</plugins>
 	</reporting>
 
@@ -153,7 +158,7 @@
 				<configuration>
 					<artifactSet>
 						<excludes>
-						<exclude>junit:junit</exclude>
+							<exclude>junit:junit</exclude>
 							<exclude>log4j:log4j:jar:</exclude>
 							<exclude>org.slf4j:</exclude>
 							<exclude>org.apache.logging.log4j:</exclude>
