--- a/pom.xml
+++ b/pom.xml
@@ -93,12 +93,12 @@
 			<version>${spark.version}</version>
 			<scope>provided</scope>
 		</dependency>
-		<dependency>
+<!-- 		<dependency>
 			<groupId>com.github.fommil.netlib</groupId>
 			<artifactId>all</artifactId>
 			<version>1.1.2</version>
 			<type>pom</type>
-		</dependency>
+		</dependency> -->
 		<dependency>
 			<groupId>com.squareup.okhttp3</groupId>
 			<artifactId>okhttp</artifactId>
