--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,8 @@
 		<project.build.targetEncoding>UTF-8</project.build.targetEncoding>
 		<junit.version>4.12</junit.version>
 		<mmtf.version>1.0.7</mmtf.version>
-		<biojava.version>5.0.0-alpha13</biojava.version>
+<!-- 		<biojava.version>5.0.0-alpha13</biojava.version> -->
+		<biojava.version>5.0.0</biojava.version>
 		<spark.version>2.2.1</spark.version>
 	</properties>
 
