--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,8 @@
 		<junit.version>4.12</junit.version>
 		<mmtf.version>1.0.7</mmtf.version>
 <!-- 		<biojava.version>5.0.0-alpha13</biojava.version> -->
-		<biojava.version>5.0.0</biojava.version>
+<!-- 		<biojava.version>5.0.0</biojava.version> -->
+		<biojava.version>5.0.1-SNAPSHOT</biojava.version>
 		<spark.version>2.2.1</spark.version>
 	</properties>
 
