--- a/pom.xml
+++ b/pom.xml
@@ -17,8 +17,9 @@
 		<mmtf.version>1.0.7</mmtf.version>
 <!-- 		<biojava.version>5.0.0-alpha13</biojava.version> -->
 <!-- 		<biojava.version>5.0.0</biojava.version> -->
-		<biojava.version>5.0.1-SNAPSHOT</biojava.version>
-		<spark.version>2.2.1</spark.version>
+<!-- 		<biojava.version>5.0.1-SNAPSHOT</biojava.version> -->
+		<biojava.version>5.0.2-SNAPSHOT</biojava.version>
+		<spark.version>2.3.1</spark.version>
 	</properties>
 
 
@@ -106,6 +107,11 @@
 			<artifactId>okhttp</artifactId>
 			<version>3.9.1</version>
 		</dependency>
+        <dependency>
+            <groupId>com.databricks</groupId>
+            <artifactId>spark-xml_2.11</artifactId>
+            <version>0.4.1</version>
+        </dependency>
 
 	</dependencies>
 
